# slipstream-sdk-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-rust-sdk.yml
docs/: ARCHITECTURE.md
examples/: advanced_config.rs  basic.rs  billing.rs  broadcast_tx.rs  deduplication.rs  leader_hints.rs  priority_fees.rs  signer_integration.rs  streaming_callbacks.rs  submit_transaction.rs  tip_instructions.rs
proto/: slipstream.proto
src/: client.rs  config.rs  discovery.rs  error.rs  lib.rs  multi_region.rs  types.rs
src/connection/: grpc.rs  health.rs  http.rs  mod.rs  quic.rs  selector.rs  websocket.rs
tests/: integration.rs
