[package]
name = "allenhark-slipstream"
version = "0.2.4"
edition = "2021"
description = "Slipstream client SDK for Rust - Solana transaction relay"
license = "Apache-2.0"
repository = "https://github.com/AllenHark-Inc/slipstream-sdk-rust"
readme = "README.md"
keywords = ["solana", "sdk", "rpc", "grpc"]
categories = ["api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# QUIC
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP fallback
reqwest = { version = "0.11", features = ["json"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# gRPC
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"

# Binary encoding
bytes = "1"
base64 = "0.21"
bs58 = "0.5"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"
